--- a/pom.xml
+++ b/pom.xml
@@ -3,21 +3,21 @@
 	<parent>
 		<groupId>io.antmedia</groupId>
 		<artifactId>parent</artifactId>
-		<version>2.8.0-SNAPSHOT</version>
+		<version>2.7.0</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>io.antmedia.plugin</groupId>
-	<artifactId>ScreenshotPlugin</artifactId>
-	<packaging>jar</packaging>
-	<name>ScreenshotPlugin</name>
+	<groupId>io.antmedia.webrtc</groupId>
+	<artifactId>Screenshot Plugin</artifactId>
+	<packaging>war</packaging>
+	<name>Screenshot Plugin Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<developers>
     		<developer>
-      		<id>mustafa</id>
-      		<email>mustafa.boleken@antmedia.io</email>
+      		<id>mekya</id>
+      		<email>mekya@antmedia.io</email>
     		</developer>
   	</developers>
   	<licenses>
@@ -28,26 +28,6 @@
 			<comments>A business-friendly OSS license</comments>
 		</license>
 	</licenses>
-	 <repositories>
-        <repository>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-            <id>central</id>
-            <name>Central Repository</name>
-            <url>https://repo.maven.apache.org/maven2</url>
-        </repository>
-        <repository>
-            <id>sonatype-snapshots</id>
-            <name>Sonatype Snapshots</name>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </repository>
-        <repository>
-            <id>sonatype-releases</id>
-            <name>Sonatype Releases</name>
-            <url>https://oss.sonatype.org/content/repositories/releases</url>
-        </repository>
-    </repositories>
 	<distributionManagement>
 		<snapshotRepository>
 			<id>ossrh</id>
@@ -59,13 +39,13 @@
 		</repository>
 	</distributionManagement>
 	<build>
-		<finalName>ScreenshotPlugin</finalName>
+		<finalName>DuetMaster</finalName>
 		<testSourceDirectory>src/test/java</testSourceDirectory>
 		<plugins>
 			<plugin>
 				<groupId>org.sonatype.plugins</groupId>
 				<artifactId>nexus-staging-maven-plugin</artifactId>
-				<version>1.6.7</version>
+				<version>${nexus-staging-maven-plugin.version}</version>
 				<extensions>true</extensions>
 				<configuration>
 					<serverId>ossrh</serverId>
@@ -76,6 +56,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
+				<version>${maven-source-plugin.version}</version>
 				<executions>
 					<execution>
 						<id>attach-sources</id>
@@ -85,30 +66,21 @@
 					</execution>
 				</executions>
 			</plugin>
+			<!-- <plugin> <artifactId>maven-javadoc-plugin</artifactId> </plugin> -->
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-source-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>attach-sources</id>
-						<goals>
-							<goal>jar-no-fork</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<artifactId>maven-jar-plugin</artifactId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>${maven-war-plugin.version}</version>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
+				<version>${maven-bundle-plugin.version}</version>
 				<extensions>true</extensions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-gpg-plugin</artifactId>
-				<version>1.6</version>
+				<version>${maven-gpg-plugin.version}</version>
 				<executions>
 					<execution>
 						<id>sign-artifacts</id>
@@ -116,6 +88,12 @@
 						<goals>
 							<goal>sign</goal>
 						</goals>
+						<configuration>
+			                <gpgArguments>
+			                    <arg>--pinentry-mode</arg>
+			                    <arg>loopback</arg>
+			                </gpgArguments>
+          				</configuration>
 					</execution>
 				</executions>
 			</plugin>
@@ -160,6 +138,25 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jcl-over-slf4j</artifactId>
+			<version>${slf4j.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jul-to-slf4j</artifactId>
+			<version>${slf4j.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>log4j-over-slf4j</artifactId>
+			<version>${slf4j.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -178,6 +175,7 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
+			<version>${spring.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -189,11 +187,13 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
+			<version>${spring.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
+			<version>${spring.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -211,6 +211,18 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
+			<version>${spring.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+    		<groupId>org.springframework</groupId>
+    		<artifactId>spring-websocket</artifactId>
+    		<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>${servlet.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		  <dependency>
@@ -221,23 +233,18 @@
         </dependency>
         <dependency>
     			<groupId>org.glassfish.jersey.ext</groupId>
-    			<artifactId>jersey-spring6</artifactId>
+    			<artifactId>jersey-spring4</artifactId>
     			<version>${jersey.version}</version>
     			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-    		<groupId>org.bytedeco</groupId>
-    		<artifactId>ffmpeg-platform</artifactId>
-            <version>${javacpp.ffmpeg.version}</version>
-            <scope>provided</scope>
-        </dependency>
 	</dependencies>
-	<description>ScreenshotPlugin for Ant Media Server</description>
+	<description>Screenshot Plugin for Ant Media Server</description>
 	<organization>
 		<name>Ant Media</name>
 		<url>http://antmedia.io</url>
